feat: fixed sitemap, latex errors

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,7 +10,7 @@ project:
     - "videos/**/*"
 
 website:
-  title: ""
+  title: "Kshitij Duraphe"
   site-url: https://ksd3.github.io
   navbar:
     title: false
