feat: added light-dark toggle

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -30,7 +30,9 @@ website:
 
 format:
   html:
-    theme: default
+    theme:
+      light: default
+      dark: darkly
     css: styles.css
     html-math-method: mathml
     toc: true
